[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
ndarray = "0.15.6"
serde_json = "1.0"
serde = { version = "1.0.195", features = ["derive"] }


[lib]
name = "hyperion"
crate_type = ["cdylib"]
